# HelloAndroid

./: .gitignore  README.md
HelloCpp/: settings.gradle
HelloCpp/app/: build.gradle
HelloCpp/app/src/androidTest/java/com/wc/hellocpp/: ExampleInstrumentedTest.kt
HelloCpp/app/src/main/: AndroidManifest.xml
HelloCpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
HelloCpp/app/src/main/java/com/wc/hellocpp/: MainActivity.kt
HelloCpp/app/src/main/res/values/: themes.xml
HelloCpp/app/src/main/res/values-night/: themes.xml
HelloCpp/app/src/test/java/com/wc/hellocpp/: ExampleUnitTest.kt
HelloCpp/gradle/wrapper/: gradle-wrapper.properties
HelloCppFromScratch/: settings.gradle
HelloCppFromScratch/app/: build.gradle
HelloCppFromScratch/app/src/main/: AndroidManifest.xml
HelloCppFromScratch/app/src/main/cpp/: CMakeLists.txt  jni.cpp
HelloCppFromScratch/app/src/main/java/com/wc/hellocppfromscratch/: MainActivity.kt
HelloCppFromScratch/app/src/main/java/com/wc/hellocppfromscratch/ui/theme/: Color.kt  Theme.kt  Type.kt
HelloCppFromScratch/app/src/main/res/values/: strings.xml  themes.xml
HelloCppFromScratch/gradle/wrapper/: gradle-wrapper.properties
HelloCppVendorLibrary/: settings.gradle
HelloCppVendorLibrary/app/: build.gradle
HelloCppVendorLibrary/app/src/main/: AndroidManifest.xml
HelloCppVendorLibrary/app/src/main/cpp/: CMakeLists.txt  dummy.cpp
HelloCppVendorLibrary/app/src/main/java/com/wc/hellocppvendorlibrary/: MainActivity.kt
HelloCppVendorLibrary/app/src/main/java/com/wc/hellocppvendorlibrary/ui/theme/: Color.kt  Theme.kt  Type.kt
HelloCppVendorLibrary/app/src/main/res/values/: strings.xml  themes.xml
HelloCppVendorLibrary/gradle/wrapper/: gradle-wrapper.properties
HelloCppVendorLibrary/vendor_library/: CMakeLists.txt  build.sh  helloSharedLib.cpp  helloSharedLib.hpp  helloStaticLib.cpp  helloStaticLib.hpp  jni_helloSharedLib.cpp  jni_helloStaticLib.cpp
HelloCppVendorLibrary/vendor_library/library_src/: build.sh  helloNativeLib.cpp  helloNativeLib.hpp
HelloWorld/app/: build.gradle
HelloWorld/app/src/androidTest/java/com/wc/helloworld/: ExampleInstrumentedTest.kt
HelloWorld/app/src/main/java/com/wc/helloworld/: MainActivity.kt
HelloWorld/app/src/main/java/com/wc/helloworld/ui/theme/: Color.kt  Theme.kt  Type.kt
HelloWorld/app/src/test/java/com/wc/helloworld/: ExampleUnitTest.kt
HelloWorld/gradle/wrapper/: gradle-wrapper.properties
